package gameelement.element;

public class DewDropElement extends BaseElement {
    // Constructors
    public DewDropElement() {
        super("Dew Drop", "DewDrop.png");
    }
}
