package gameelement.element;

public class HeartBerryElement extends BaseElement {
    // Constructors
    public HeartBerryElement() {
        super("Heart Berry", "HeartBerry.png");
    }
}
