package gameelement.element;

public class SparkEmberElement extends BaseElement {
    // Constructors
    public SparkEmberElement() {
        super("Spark Ember", "SparkEmber.png");
    }

}
