package gameelement.potion;

public enum PotionType {
    DREAM_MIST , ENERGY_SPLASH , NOVA_SPARK , PASSION_POP , SOOTHING_LOVE , STARLOVE_CHARM
}
